@@ -16,6 +16,8 @@ dillo-2.1
  - Switched a_UIcmd_save() to take its URL from history (not location bar).
  - Set prefs.vw_fontname as deafult font for the UI.
  - Fix: recover page focus when clicking-out of a widget.
+ - Fixed a segfault bug in the test/ directory.
+ - Set middle click to submit in a new TAB. (Helps to keep form data!)
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
@@ -29,11 +31,14 @@ dillo-2.1
    Patch: Justus Winter
 +- Reduced warnings with gcc-4.3.
    Patch: Thomas Orgis
++- Made the parser recognize "[^ ]/>"-terminated XML elements.
+   Patch: Johannes Hofmann
 +- Added the "middle_click_drags_page" dillorc option.
    Patch: Jorge Arellano, Thomas Orgis
 +- Set the File menu label to hide when the File menu-button is shown.
  ? Trying a new iconv() test in configure.in.
  - Allowed the rc parser to skip whitespace around the equal sign.
+ - Fixed the parser not to call Html_tag_close_* functions twice.
    Patches: Jorge Arellano
 
 dw
